Ensure mobile navigation menu is visible on vertical tablets

--- a/app/styles/components/header.scss
+++ b/app/styles/components/header.scss
@@ -60,7 +60,7 @@ header {
 				cursor:pointer;
 			}
 
-			@include media(max-width-768) {
+			@include media(max-width-1000) {
 				display:flex;
 			}
 
